--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#3498db" />
+  <meta
+          name="description"
+          content="Site développé par Kriss, développeur fullstack passionné."
+  />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <title>CV Generator by Kriss</title>
+  <style>/* Global Styles */
+  body {
+    margin: 0;
+    font-family: 'Arial', sans-serif;
+    background-color: #f4f7fc;
+    color: #2c3e50;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-height: 100vh;
+  }
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+  /* Root container for React */
+  #root {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+  }
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+  /* Footer */
+  footer {
+    text-align: center;
+    padding: 10px 20px;
+    background-color: #3498db;
+    color: white;
+    font-size: 14px;
+    border-top: 3px solid #2980b9;
+    box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
+  }
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+  footer p {
+    margin: 0;
+  }
+
+  /* Links */
+  a {
+    color: #3498db;
+    text-decoration: none;
+    transition: all 0.3s ease-in-out;
+  }
+
+  a:hover {
+    color: #2980b9;
+    text-decoration: underline;
+  }
+  </style>
+</head>
+<body>
+<noscript>Veuillez activer JavaScript pour profiter pleinement de ce site.</noscript>
+<div id="root"></div>
+<footer>
+  <p>Site développé avec ❤️ par Kriss, développeur fullstack.</p>
+</footer>
+</body>
 </html>
